# erc20_price_aggregator

./: Cargo.toml  config.json
src/: README.md  config.rs  console_display.rs  exchange.rs  lib.rs  main.rs  rate_query_factory.rs
src/exchange/: mod.rs  uniswap.rs
