[package]
name = "price_aggregator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
serde_json = "1.0.89"
serde = { version = "1.0", features = ["derive"] }
ethers = "1.0.0"
async-std = { version = "1.6", features = ["attributes"] }
dotenv = "0.15.0"
